# restful

./: CMakeLists.txt  LICENSE  README.md  restful.pro
include/RESTFul/: RequestServer
includes/: Resource
includes/RESTFul/: Collection
src/: CMakeLists.txt  collection.cpp  collection.h  connectionhandler.cpp  connectionhandler.h  request.cpp  request.h  requestparser.cpp  requestparser.h  requestserver.cpp  requestserver.h  resource.cpp  resource.h  server.cpp  server.h  src.pro
testApp/: CMakeLists.txt  main.cpp  mycollection.cpp  mycollection.h  myresource.cpp  myresource.h  testapp.pro
